--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
   <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Text|Lobster" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>...Loading</app-root>
 </body>
 </html>
